# easy_ai

./: .gitignore  README.md  pyproject.toml
docs/: 优化todo.md  关键问题.md
src/: main.py
src/langchain_demo/: __init__.py  app.py  types.py
src/langchain_demo/agent/: __init__.py  builtin_tools.py  mcp_tools.py  service.py
src/langchain_demo/chains/: __init__.py  qa_chain.py
src/langchain_demo/config/: .env.example  mcp_servers.json  settings.py
src/langchain_demo/llm/: __init__.py  client.py
src/langchain_demo/services/: chat_service.py
