[project]
name = "langchain-demo"
version = "0.1.0"
description = "A clean and layered LangChain demo project"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.27",
    "langchain-openai>=0.3.28",
    "langchain-mcp-adapters>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
pretty = true
show_error_codes = true
warn_unused_configs = true
exclude = ["^build/"]
